fix formItem vertical align

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -6,9 +6,9 @@
 @import "./mixin";
 
 @form-prefix-cls: ~"@{ant-prefix}-form";
-@form-component-height: @input-height-lg;
+@form-component-height: @input-height-base;
 @form-feedback-icon-size: 14px;
-@form-help-margin-top: -2px;
+@form-help-margin-top: 2px;
 
 .@{form-prefix-cls} {
   .reset-component;
@@ -245,17 +245,11 @@ form {
     // Fix https://github.com/ant-design/ant-design/issues/6097
     &:only-child {
       display: block;
-      position: relative;
-      top: (@input-height-lg - @input-height-base) / 2;
 
       &.@{ant-prefix}-select-sm,
       &.@{ant-prefix}-cascader-picker-small {
-        top: (@input-height-lg - @input-height-sm) / 2;
-      }
-
-      &.@{ant-prefix}-select-lg,
-      &.@{ant-prefix}-cascader-picker-large {
-        top: 0;
+        position: relative;
+        top: (@input-height-base - @input-height-sm) / 2;
       }
     }
   }
@@ -271,7 +265,6 @@ form {
   .@{ant-prefix}-input-group-addon .@{ant-prefix}-cascader-picker {
     &:only-child {
       display: inline-block;
-      top: 0;
 
       &.@{ant-prefix}-select-sm,
       &.@{ant-prefix}-cascader-picker-small {
@@ -293,6 +286,25 @@ form {
       top: (@input-height-lg - @input-height-sm) / 2;
     }
   }
+
+  // fix large size vertical align. https://github.com/ant-design/ant-design/issues/8336
+  .@{ant-prefix}-input-lg,
+  .@{ant-prefix}-input-number-lg,
+  .@{ant-prefix}-cascader-picker-large,
+  .@{ant-prefix}-select-lg,
+  .@{ant-prefix}-calendar-picker-large,
+  .@{ant-prefix}-time-picker-large,
+  .@{ant-prefix}-radio-group-large {
+    position: relative;
+    top: (@input-height-base - @input-height-lg) / 2;
+  }
+
+  .@{ant-prefix}-cascader-picker-large,
+  .@{ant-prefix}-calendar-picker-large {
+    .@{ant-prefix}-input-lg {
+      top: 0;
+    }
+  }
 }
 
 // Input combined with select
@@ -307,7 +319,7 @@ form {
 
   .@{ant-prefix}-select-selection--single {
     margin-left: -1px;
-    height: @input-height-lg;
+    height: @input-height-base;
     background-color: #eee;
     .@{ant-prefix}-select-selection__rendered {
       padding-left: 8px;
@@ -427,8 +439,8 @@ form {
     right: 0;
     visibility: visible;
     pointer-events: none;
-    .square(@input-height-lg);
-    line-height: @input-height-lg;
+    .square(@input-height-base);
+    line-height: @input-height-base;
     text-align: center;
     font-size: @form-feedback-icon-size;
     animation: zoomIn .3s @ease-out-back;
